envoy.local.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service_host
              domains: ["*"]
              routes:
              - match: { prefix: "/wechat.MiniProgramService" }
                route:
                  cluster: euler-wechat-miniprogram-cluster
                  max_grpc_timeout: 0s
              - match: { prefix: "/wechat.thirdpartyplatform.AuthorizationService" }
                route:
                  cluster: euler-wechat-thirdpartyplatform-cluster
                  max_grpc_timeout: 0s
              cors:
                allow_origin:
                - "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
#                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                max_age: "1728000"
                expose_headers: grpc-status,grpc-message
                enabled: true
          http_filters:
          - name: envoy.grpc_web
          - name: envoy.grpc_json_transcoder
            config:
              proto_descriptor: /etc/envoy/descriptor_set.desc
              services:
              - "wechat.MiniProgramService"
              - "wechat.thirdpartyplatform.AuthorizationService"
              print_options:
                add_whitespace: true
                always_print_primitive_fields: true
                always_print_enums_as_ints: false
                preserve_proto_field_names: false
          - name: envoy.cors
          - name: envoy.router

  clusters:
  - name: euler-wechat-miniprogram-cluster
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: docker.for.mac.localhost
        port_value: 50052

  - name: euler-wechat-thirdpartyplatform-cluster
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: docker.for.mac.localhost
        port_value: 50051
