envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: http-listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service_host
              domains: ["*"]
              routes:
                - match: { prefix: "/insole.app.order.OrderService" }
                  route:
                    cluster: insole-app-cluster
                    max_grpc_timeout: 0s
                - match: { prefix: "/insole.app.sku.SkuService" }
                  route:
                    cluster: insole-app-cluster
                    max_grpc_timeout: 0s
                - match: { prefix: "/insole.app.stock.StockService" }
                  route:
                    cluster: insole-app-cluster
                    max_grpc_timeout: 0s
                - match: { prefix: "/insole.app.report.ReportService" }
                  route:
                    cluster: insole-app-cluster
                    max_grpc_timeout: 0s
                - match: { prefix: "/insole.app.ws.WsService" }
                  route:
                    cluster: insole-ws-cluster
                    max_grpc_timeout: 0s
              cors:
                allow_origin:
                - "*"
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,euler-access-token
                max_age: "1728000"
                expose_headers: grpc-status,grpc-message
                enabled: true

          http_filters:
          - name: envoy.grpc_web
          - name: envoy.grpc_json_transcoder
            config:
              proto_descriptor: /etc/envoy/descriptor_set.desc
              services:
              - "insole.app.order.OrderService"
              - "insole.app.sku.SkuService"
              - "insole.app.report.ReportService"
              - "insole.app.stock.StockService"
              - "insole.app.ws.WsService"
              print_options:
                add_whitespace: true
                always_print_primitive_fields: true
                always_print_enums_as_ints: false
                preserve_proto_field_names: false
          - name: envoy.cors
          - name: envoy.router

  clusters:
  - name: insole-app-cluster
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: sennofit-insole-app-service
        port_value: 50051
  - name: insole-ws-cluster
    connect_timeout: 0.25s
    type: logical_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: sennofit-insole-report-service
        port_value: 8080
